deleted some files

--- a/projects.html
+++ b/projects.html
@@ -90,7 +90,7 @@
             </div>
             </div>
             <div class="row ProjectLists">
-            <div class="col-sm-6 col-sm-offset-3 col-xs-12 col-xs-offset-0">
+            <div class="col-md-6 col-md-offset-3 col-xs-12 col-xs-offset-0">
             <div class="media ">
             <div class="media-left">
             <img src="images/blog.jpg"  height="200px" width="200px"  class="media-object img-circle" />
@@ -111,7 +111,7 @@
             </div>
             </div>
             <div class="row ProjectLists">
-            <div class="col-sm-6 col-sm-offset-3 col-xs-12 col-xs-offset-0">
+            <div class="col-md-6 col-md-offset-3 col-xs-12 col-xs-offset-0">
             <div class="media ">
             <div class="media-left">
             <img src="images/weather.jpg"  height="200px" width="200px"  class="media-object img-circle" />
@@ -132,7 +132,7 @@
             </div>
             </div>
             <div class="row ProjectLists">
-            <div class="col-sm-6 col-sm-offset-3 col-xs-12 col-xs-offset-0">
+            <div class="col-md-6 col-md-offset-3 col-xs-12 col-xs-offset-0">
             <div class="media ">
             <div class="media-left">
             <img src="images/video.jpg"  height="200px" width="200"  class="media-object img-circle" />
@@ -153,7 +153,7 @@
             </div>
             </div>
             <div class="row ProjectLists">
-            <div class="col-sm-6 col-sm-offset-3 col-xs-12 col-xs-offset-0">
+            <div class="col-md-6 col-md-offset-3 col-xs-12 col-xs-offset-0">
             <div class="media ">
             <div class="media-left">
             <img src="images/admin.png"  height="150px" class="media-object img-circle" />
@@ -174,7 +174,7 @@
             </div>
             </div>
             <div class="row ProjectLists">
-            <div class="col-sm-6 col-sm-offset-3 col-xs-12 col-xs-offset-0">
+            <div class="col-md-6 col-md-offset-3 col-xs-12 col-xs-offset-0">
             <div class="media ">
             <div class="media-left">
             <img src="images/career.jpg"  height="150px"  class="media-object img-circle" />
@@ -195,7 +195,7 @@
             </div>
             </div>
             <div class="row ProjectLists">
-            <div class="col-sm-6 col-sm-offset-3 col-xs-12 col-xs-offset-0">
+            <div class="col-md-6 col-md-offset-3 col-xs-12 col-xs-offset-0">
             <div class="media ">
             <div class="media-left">
             <img src="images/todo.jpg"  height="200px"  class="media-object img-circle" />
