--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
                     </div> -->
 
-                    <div class="col-xs-9 col-xs-offset-2">
+                    <div class="col-sm-9 col-sm-offset-2 col-xs-12 col-xs-offset-0">
                         <div class="well Well">
                             <h1 class="text-center">FullStack Web Developer</h1>
                             <hr />
