--- a/resume.html
+++ b/resume.html
@@ -49,7 +49,7 @@
             <div class="container-fluid ContactBody">
             <div class="row">
             <div class="col-md-4 col-md-offset-0 ResumeLeft col-xs-12" id="resumeLeft" >
-            <img src="images/avatar.png"  height="200px" class="img-circle" />
+            <img src="images/pra.png"  height="170px" width="170" class="img-circle" />
             <h1 class="">Prakash Kasula</h1>
             <h2>Programmer
             </h2>
@@ -59,11 +59,11 @@
             <h2>Address</h2>
             <p class="">4-28 Hyderabad Secundrabad</p>
             <h2>Phone</h2>
-            <p class="">8096512197</p>
+            <p class=""><a><i class="fas fa-phone"></i> +918096512197</a></p>
             <h2>Email</h2>
-            <p>saiprakadh@gmail.com</p>
+            <p><a><i class="fas fa-envelope-square"></i> saiprakadh@gmail.com</a></p>
             <h2>Website</h2>
-            <p>www.prakash04.ml</p>
+            <p><a href="http://www.prakash04.ml" target="_blank"><i class="fas fa-globe"></i> www.prakash04.ml</a></p>
 
 
             </div>
