--- a/resume.html
+++ b/resume.html
@@ -49,7 +49,7 @@
             <div class="container-fluid ContactBody">
             <div class="row">
             <div class="col-md-4 col-md-offset-0 ResumeLeft col-xs-12" id="resumeLeft" >
-            <img src="images/avatar.png"  height="200px" class="img-circle" />
+            <img src="images/avatar.png"  height="200px" width="180px" class="img-circle" />
             <h1 class="">Prakash Kasula</h1>
             <h2>Programmer
             </h2>
