modified projects and resume

--- a/projects.html
+++ b/projects.html
@@ -81,7 +81,7 @@
             <small><a href="http://www.prakash04.ml" target="_blank">https://www.prakash04.ml</a>
             </small>
             <p class="text-justify" id="para">
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was populari
+                    This is a static Business Portfolio website built with basic frontend technologies like HTML/CSS and Bootstrap. For more information visit the above link.
             </p>
             <hr />
 
@@ -102,7 +102,7 @@
             <small><a href="https://github.com/prakash8096/Blog-Post" target="_blank">https://github.com/prakash8096/Blog-Post</a>
             </small>
             <p class="text-justify" id="para">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularis
+            This project Blog-Post is built with python/Django. Here the user can post their blogs.They can register if they won't have an account.if the user already have an account they can login with their respective username and password and also in case if they forget their password they can reset it. Every user have their own profile section so that they can update their Image or Personal details. 
             </p>
             <hr />
 
@@ -123,7 +123,7 @@
             <small><a href="https://github.com/prakash8096/WeatherApp" target="_blank">https://github.com/prakash8096/WeatherApp</a>
             </small>
             <p class="text-justify" id="para">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularis
+            This weather app is built with Python/Django, HTML/CSS, Bootstrap and integrated with weather APIs. Here the user enters the location to find the current weather. In case if he enters the incorrect city it prompts that the city  does not exist. The users can delete the cities which are added previously. 
             </p>
             <hr />
 
@@ -144,7 +144,7 @@
             <small><a href="https://github.com/prakash8096/video-request-form" target="_blank">https://github.com/prakash8096/video-request-form</a>
             </small>
             <p class="text-justify" id="para">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularis
+            This video request form project is built with Python/Django and front end technologies like HTML,CSS Bootstrap. Here the users requests the videos that they are interested in so that the Teacher/Person who makes the video will be able to see the requests that are posted by the different users and make videos according to their requests. It's just like requesting videos in the youtube for the Youtuber. The users can delete their requests or even they can edit their request and repost it.
             </p>
             <hr />
 
@@ -165,7 +165,7 @@
             <small><a href="https://github.com/prakash8096/AdminDashboard" target="_blank">https://github.com/prakash8096/AdminDashboard</a>
             </small>
             <p class="text-justify" id="para">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularis
+            It is a static website built with HTML/CSS and Bootstrap. Here we will be knowing how the admin dashboard looks like in the backend and how the data/records or  different sections of the dashboard arranged. 
             </p>
             <hr />
 
@@ -186,7 +186,7 @@
             <small><a href="https://github.com/prakash8096/courses" target="_blank">https://github.com/prakash8096/CareerPath</a>
             </small>
             <p class="text-justify" id="para">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularis
+            This CareerPath project is bulit with Python/Django and basic frontend technologies like HTML/CSS. It is a website which give career guidance for the children whoever completed their 12th standard so that they can built their career in the field that they are interested in. It is the website for the students who are from the maths background. Here they can know about the different branches in engineering like computerscience and engineering or civil,mechanical engineering.They able to know about the future opportunities in LAW filed or as a Army/Navy officer.
             </p>
             <hr />
 
