modified resume under pic

--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
             <textarea class="form-control" rows="10">
             </textarea>
             </div>
-            <button class="btn btn-primary btn-lg">Send <i class="fas fa-paper-plane"></i></button>
+            <button class="btn btn-primary  btn-lg" type="reset" >Send <i class="fas fa-paper-plane"></i></button>
             
            
             </div>
