--- a/resume.html
+++ b/resume.html
@@ -54,7 +54,7 @@
             <h2>Programmer
             </h2>
             <hr/>
-            <p class="text-justify">I am B.Tech (CSE) student. I can easily learn new things and implement it quickly and work hard to it</p>
+            <p class="text-justify">I am B.Tech (CSE) student. I can easily learn new things and implement it quickly and work hard to do it</p>
             <hr />
             <h2>Address</h2>
             <p class="">4-28 Hyderabad Secundrabad</p>
